# Lorien

./: SCENE_GENERATOR_STATUS.md
lorien/: BevyAppSingleton.tscn  Config.gd  Main.gd  lorien_bevy.gdextension  project.godot
lorien/BrushStroke/: BrushStroke.gd
lorien/InfiniteCanvas/: BevyCanvasManager.gd  InfiniteCanvas.gd  InfiniteCanvas.tscn  InfiniteCanvasGrid.gd
lorien/InfiniteCanvas/Tools/: BrushTool.gd  CircleTool.gd  LineTool.gd  RectangleTool.gd  SelectionTool.gd
lorien/Misc/: Settings.gd  StatePersistence.gd
lorien/Palette/: PaletteManager.gd
lorien/UI/: Toolbar.gd
lorien/UI/Dialogs/: AboutDialog.gd  AboutDialog.tscn  EditPaletteDialog.gd  SettingsDialog.gd
lorien/rust/: Cargo.toml
lorien/rust/src/: lib.rs
lorien/rust/src/components/: mod.rs  spatial.rs  stroke.rs
lorien/rust/src/events/: canvas.rs  input.rs  mod.rs  tool.rs
lorien/rust/src/resources/: canvas.rs  history.rs  mod.rs  renovated_tools.rs  spatial.rs  stroke.rs  tool.rs
lorien/rust/src/systems/: history.rs  mod.rs  rendering.rs  renovated_stroke.rs  renovated_tools.rs  scene_generator.rs  spatial_index.rs  stroke_management.rs  tools.rs
