[package]
name = "lorien_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset", 
    "bevy_state", 
    "bevy_log"
] }
bevy_godot4 = { git = "https://github.com/jrockett6/bevy_godot4", branch = "main" }
godot = "0.2.4"
anyhow = "1"
fastrand = "2.0"
